...
        disabledColor: mainButton ? AppColors.brownishGrey : AppColors.paleGrey,
        shape: RoundedRectangleBorder(
          borderRadius: BorderRadius.circular(8),
        ),
        child: isLoading
            ? const CircularProgressIndicator(
              key: Key('ButtonLoadingIndicator'),
                color: AppColors.white,
              )
            : child ??
                Text(
                  textKey,
                  style: mainButton
...
